--- a/chnaldi_colab.ipynb
+++ b/chnaldi_colab.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "chnaldi_colab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPf7SrMXskpGOoKUyPXtqL4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,45 +42,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xf26IyWyPt_O"
+        "id": "WeHYWQtsSgkV"
       },
       "source": [
-        "from google.colab import files\n",
-        "\n",
-        "import platform, sys\n",
-        "python_version=platform.python_version()\n",
-        "from distutils.version import LooseVersion, StrictVersion\n",
-        "\n",
-        "if ( LooseVersion(python_version) < LooseVersion(\"3.0.0\")):\n",
-        "    print(\"Python3 is needed!\");\n",
-        "    print(\"How to fix: Runtime/Change_runtime_type/Python 3\");\n",
-        "    sys.exit()\n",
         "try:\n",
-        "    from dolfin import *; from mshr import *\n",
-        "except ImportError as e:\n",
-        "    !apt-get install -y -qq software-properties-common python-software-properties module-init-tools\n",
-        "    !add-apt-repository -y ppa:fenics-packages/fenics\n",
-        "    !apt-get update -qq\n",
-        "    !apt install -y --no-install-recommends fenics\n",
-        "    from dolfin import *; from mshr import *\n",
-        "    \n",
-        "import matplotlib.pyplot as plt;\n",
-        "from IPython.display import clear_output, display; import time; import dolfin.common.plotting as fenicsplot \n",
-        "import time\n",
-        "\n",
-        "import os, sys, shutil\n",
-        "\n",
-        "dolfin_version = dolfin.__version__\n",
-        "print ('dolfin version:', dolfin_version)\n",
-        "\n",
-        "!rm -rf * # clean up all files\n",
-        "# Useful commands\n",
-        "# Remove an empty folder      : os.rmdir(\"my_results\")\n",
-        "# Remove a folder with files  : shutil.rmtree(\"results\")\n",
-        "# Make a folder               : os.mkdir(\"my_results\")\n",
-        "# Runtime/Change_runtime_type/Python3"
+        "    import dolfin\n",
+        "except ImportError:\n",
+        "    !wget \"https://fem-on-colab.github.io/releases/fenics-install.sh\" -O \"/tmp/fenics-install.sh\" && bash \"/tmp/fenics-install.sh\"\n",
+        "    import dolfin"
       ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xX5oYjsdTKTk"
+      },
+      "source": [
+        "from dolfin import *"
+      ],
+      "execution_count": 13,
       "outputs": []
     }
   ]
