--- a/chnaldi_colab.ipynb
+++ b/chnaldi_colab.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "chnaldi_colab.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,11 +33,56 @@
         "id": "sV7fPZpFM3vn"
       },
       "source": [
-        "# Chnaldi Patterns\n",
-        "Chnaldi figures are obtained when a certain piece of material, usually circular of square, is vibrating in a particular mode. the nodes and anti-nodes \n",
+        "# The sound of geometry\n",
+        "Chnaldi figures are obtained when a certain piece of material, usually circular of square, is vibrating in a particular mode. The nodes and anti-nodes \n",
         "formed by the oscillation make complex but symmetrical patterns all over the surface that can be seen if a fine grain material is sprinkled on top of the surface.\n",
         "\n",
-        "Our project consists of finding those same patterns for boundary conditions more elaborate than the usal square. In fact, the user will make is own shape and the code will give him back the first resonance patterns. \n"
+        "These calculations can also be applied to the case of a vibrating membrane, or drum. Changing the shape of the drum will change it's harmonics and hence it's sound. Our project explores how different shaped drums produce different harmonics and different sounds when struck.\n",
+        "\n",
+        "To get those fancy patterns, our code is solving the Helmholtz equation with Dirichlet boundary conditions: \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QIXGiVBhWbEN"
+      },
+      "source": [
+        "\\begin{cases} \\nabla^2 u(\\vec{r}) + \\lambda^2 u(\\vec{r})=0 \\quad on \\  \\Omega\\ \\\\ u(\\vec{r})=0 \\quad on \\ \\partial \\Omega \\end{cases}\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "S_cmm9CJaS3I"
+      },
+      "source": [
+        "Which is derived by separation of variables on the wave equation: "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AQWTT5EmZaJM"
+      },
+      "source": [
+        "\\begin{align}\n",
+        "\\nabla^2 \\psi(t,\\vec{r})=\\frac{1}{v^2}\\frac{\\partial^2 \\psi(t,\\vec{r})}{\\partial^2 t} \\\\ \n",
+        "\\psi(t,\\vec{r})=\\phi(t)u(\\vec{r}) \\\\\n",
+        "\\Rightarrow \\ \\ \\nabla^2 \\phi u = \\frac{1}{v^2}\\partial^2_t \\phi u \\\\\n",
+        "\\frac{1}{u}\\nabla^2 u=\\frac{1}{v^2}\\frac{1}{\\phi}\\partial_t^2 \\phi = -\\lambda^2\n",
+        "\\end{align}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q6AimGlSVoB7"
+      },
+      "source": [
+        "# Packages & Dependencies\n"
       ]
     },
     {
@@ -55,12 +101,21 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GHBR6T-_Vh0U"
+      },
+      "source": [
+        "# Imports"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "xX5oYjsdTKTk"
       },
       "source": [
-        "#input\n",
+        "\n",
         "from dolfin import *\n",
         "from mshr import *\n",
         "import numpy as np\n",
@@ -76,7 +131,7 @@
         "id": "AXn-hhI7VBKe"
       },
       "source": [
-        "# SOLVER"
+        "# Solver\n"
       ]
     },
     {
@@ -164,12 +219,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sfrMLuJ-UdDk",
-        "outputId": "bee774b9-322b-42b3-decd-890b27eb3030",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 660
-        }
+          "height": 636
+        },
+        "id": "sfrMLuJ-UdDk",
+        "outputId": "bee774b9-322b-42b3-decd-890b27eb3030"
       },
       "source": [
         "test_points = [ [0.,0.], [1.,0.], [1.,1.], [2.,1.,], [2.,2.], [0.,2.], [0.,0.]]\n",
@@ -243,6 +298,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NtDxiLXoarW8"
+      },
+      "source": [
+        "# Results\n"
+      ]
     }
   ]
 }
