--- a/chnaldi_colab.ipynb
+++ b/chnaldi_colab.ipynb
@@ -144,11 +144,11 @@
         "import pygame, sys\n",
         "from pygame.locals import *\n",
         "\n",
-        "import os\n",
-        "os.environ['SDL_VIDEODRIVER']='dummy'\n",
-        "pygame.display.set_mode((640,480))\n",
-        "from google.colab.patches import cv2_imshow\n",
-        "from google.colab import output"
+        "# import os\n",
+        "# os.environ['SDL_VIDEODRIVER']='dummy'\n",
+        "# pygame.display.set_mode((640,480))\n",
+        "# from google.colab.patches import cv2_imshow\n",
+        "# from google.colab import output"
       ],
       "execution_count": 59,
       "outputs": []
@@ -340,7 +340,7 @@
         "    output = [[float(point.x), float(point.y)] for point in pointListReversed]\n",
         "    return output\n",
         "\n",
-        "pygame.init()\n",
+        "# pygame.init()\n",
         "\n",
         "\n",
         "\n",
@@ -373,7 +373,7 @@
         "    run_me = True\n",
         "    while run_me:\n",
         "        # output.clear(wait=True)\n",
-        "        cv2_imshow(grid)\n",
+        "        # cv2_imshow(grid)\n",
         "        # Limit the framerate\n",
         "        clock.tick(fps_limit)\n",
         "\n",
