--- a/chnaldi_colab.ipynb
+++ b/chnaldi_colab.ipynb
@@ -833,6 +833,8 @@
         "import matplotlib.pyplot as plt\n",
         "import pygame, sys\n",
         "from pygame.locals import *\n",
+        "from pygame import mixer\n",
+        "import pyaudio\n",
         "\n",
         "# import os\n",
         "# os.environ['SDL_VIDEODRIVER']='dummy'\n",
@@ -869,6 +871,8 @@
         "from dolfin import *\n",
         "import matplotlib.pyplot as plt\n",
         "from pygame.locals import *\n",
+        "from audio import *\n",
+        "from strike_drum import strike_drum\n",
         "\n",
         "import dolfin_solver as dfs\n",
         "\n",
@@ -1035,10 +1039,12 @@
         "\n",
         "# Returns correctly formatted output: List of (x,y) coordinates of all points\n",
         "def output(pointList):\n",
-        "    # pointListReversed = pointList[::-1]\n",
-        "    pointListReversed = pointList[::]\n",
-        "    output = [[float(point.x), float(point.y)] for point in pointListReversed]\n",
-        "    return output\n",
+        "    output = [[float(point.x), (gridHeight - point.y)] for point in pointList]\n",
+        "    outputInt = [Point(int(coordinates[0]), int(coordinates[1])) for coordinates in output]\n",
+        "    if (orientation(outputInt[0], outputInt[1], outputInt[2]) == 2):\n",
+        "        return output\n",
+        "    else:\n",
+        "        return output[::-1]\n",
         "\n",
         "# Color definitions\n",
         "black = 0, 0, 0\n",
@@ -1062,15 +1068,17 @@
         "points = []\n",
         "lines = []\n",
         "\n",
-        "shape_out = []\n",
+        "shapeOut = []\n",
+        "impulsePosition = []\n",
         "\n",
         "def programLoop():\n",
-        "    global shape_out\n",
-        "    fps_limit = 60\n",
-        "    run_me = True\n",
-        "    while run_me:\n",
+        "    global shapeOut\n",
+        "    global impulsePosition\n",
+        "    fpsLimit = 60\n",
+        "    runMe = True\n",
+        "    while runMe:\n",
         "        # Limit the framerate\n",
-        "        clock.tick(fps_limit)\n",
+        "        clock.tick(fpsLimit)\n",
         "\n",
         "        # Clear the grid by filling all white\n",
         "        if (len(points) == 0):\n",
@@ -1084,8 +1092,15 @@
         "                    closeShape(points[0].x, points[0].y)\n",
         "                    if (numOfPoints == len(points)):\n",
         "                        continue\n",
-        "                    shape_out = output(points)\n",
-        "                    run_me = False\n",
+        "                    waiting = True\n",
+        "                    while (waiting):\n",
+        "                        event = pygame.event.wait()\n",
+        "                        if (event.type == MOUSEBUTTONDOWN):\n",
+        "                            x, y = pygame.mouse.get_pos()\n",
+        "                            waiting = False\n",
+        "                    impulsePosition = [float(x), float(gridHeight - y)]\n",
+        "                    shapeOut = output(points)\n",
+        "                    runMe = False\n",
         "            if event.type == MOUSEBUTTONDOWN:\n",
         "                x, y = pygame.mouse.get_pos()\n",
         "                continueShape(x, y)\n",
@@ -1097,7 +1112,7 @@
         "\n",
         "                # Final output, must decide what to do with it\n",
         "                output(points)\n",
-        "                run_me = False\n",
+        "                runMe = False\n",
         "\n",
         "        # Display everything\n",
         "        pygame.display.flip()\n",
@@ -1109,9 +1124,10 @@
         "# Quit the display\n",
         "pygame.quit()\n",
         "\n",
-        "print(shape_out)\n",
+        "print(shapeOut)\n",
+        "print(impulsePosition)\n",
         "\n",
-        "testmesh = dfs.generate_mesh_from_coords(shape_out, 50)\n",
+        "testmesh = dfs.generate_mesh_from_coords(shapeOut, 50)\n",
         "plot(testmesh)\n",
         "plt.show()\n",
         "\n",
@@ -1119,24 +1135,38 @@
         "\n",
         "qquit = False\n",
         "while (not qquit):\n",
-        "    uinput = input(\"What eigenfunction would you like? (0-99)\\n Anything else to quit! \\n\")\n",
-        "    print(type(uinput))\n",
+        "    uinput = input(\"What eigenfunction would you like? (0-99)\\na to animate, q to quit \\n\")\n",
         "\n",
-        "    try:\n",
-        "        uinput = int(uinput)\n",
+        "    if (uinput == \"a\"):\n",
+        "        strike_drum(impulsePosition, testmesh, v, eigenvals, 3)\n",
+        "    elif (uinput == \"q\"):\n",
+        "        qquit = True\n",
+        "    else:\n",
+        "        try:\n",
+        "            uinput = int(uinput)\n",
         "\n",
-        "        if (0 <= uinput <= 99):\n",
+        "            if (0 <= uinput <= 99):\n",
         "\n",
-        "            plot(v[uinput])\n",
-        "            print(\"The Eigenvalue is : \", eigenvals[uinput])\n",
+        "                plot(v[uinput])\n",
         "\n",
-        "            plt.show()\n",
+        "                t_eig_val = eigenvals[uinput]\n",
         "\n",
-        "        else:\n",
-        "            print(\"Bad input\")\n",
+        "                print(\"The Eigenvalue is : \", t_eig_val)\n",
         "\n",
-        "    except:\n",
-        "        print(\"Bad input\")"
+        "                freq = frequency(t_eig_val)\n",
+        "                print(\"The harmonic frequency is : \", freq)\n",
+        "\n",
+        "                plt.title(str(round(freq, 2)) + \"Hz\")\n",
+        "\n",
+        "                plt.show()\n",
+        "\n",
+        "                play_sound(0.5, 44100, 3, freq)\n",
+        "\n",
+        "            else:\n",
+        "                print(\"Bad input\")\n",
+        "\n",
+        "        except:\n",
+        "            print(\"Bad input\")"
       ],
       "execution_count": null,
       "outputs": [
@@ -1154,6 +1184,50 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jui3UVfWUE9j"
+      },
+      "source": [
+        "import pyaudio\n",
+        "import numpy as np\n",
+        "from pygame import mixer\n",
+        "\n",
+        "\n",
+        "def frequency(eingenvalue, speed_sound = 300): \n",
+        "\n",
+        "    frequency  = speed_sound*800*(eingenvalue)**(1/2)/(np.pi*2)\n",
+        "\n",
+        "    return frequency\n",
+        "\n",
+        "\n",
+        "def play_sound(volume, sampling_rate, duration, freq) : \n",
+        "\n",
+        "    if freq == 90 : \n",
+        "\n",
+        "        file = 'therock.mp3'\n",
+        "        mixer.init()\n",
+        "        mixer.music.load(file)\n",
+        "        mixer.music.set_volume(0.6)\n",
+        "        mixer.music.play()\n",
+        "    \n",
+        "    \n",
+        "    else : \n",
+        "        p = pyaudio.PyAudio()\n",
+        "\n",
+        "        samples = (np.sin(2*np.pi*np.arange(sampling_rate*duration)*freq/sampling_rate)).astype(np.float32)\n",
+        "\n",
+        "        stream = p.open(format = pyaudio.paFloat32, channels = 1, rate = sampling_rate, output = True)\n",
+        "\n",
+        "        stream.write(volume*samples)\n",
+        "\n",
+        "        stream.stop_stream()\n",
+        "        stream.close()\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
